<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="16dp"
    android:fitsSystemWindows="true"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="70sp"
        >

        <ImageButton
            android:id="@+id/BCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.035" />

        <TextView
            android:id="@+id/tituloAyuda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Modificar"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.035" />

        <ImageButton
            android:id="@+id/BConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_check_yellow"
            app:tint="@color/yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.955"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.035" />

        <TextView
            android:id="@+id/categoria_subtitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Categoria"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:padding="16dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/tituloAyuda"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoria_subtitulo"
            >

            <RadioButton
                android:id="@+id/categoria1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Categoria1FAQ" />

            <RadioButton
                android:id="@+id/categoria2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Categoria2FAQ" />

            <RadioButton
                android:id="@+id/categoria3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Categoria3FAQ" />

            <RadioButton
                android:id="@+id/categoria4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Categoria4FAQ" />

            <RadioButton
                android:id="@+id/categoria5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Categoria5FAQ" />
        </RadioGroup>
        <TextView
            android:id="@+id/titulo_pregunta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Titulo"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:padding="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <!-- Cuadro para introducir título -->
        <EditText
            android:id="@+id/preguntaEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/TituloPregunta"
            android:singleLine="true"
            android:textColor="@color/mediumGray"
            android:textSize="15sp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_introduce_text_square"
            app:layout_constraintTop_toBottomOf="@+id/titulo_pregunta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/respuestaTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Descripcion"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:padding="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/preguntaEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <!-- Cuadro para introducir descripcion -->
        <EditText
            android:id="@+id/respuestaEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/DescripcionRespuesta"
            android:textColor="@color/mediumGray"
            android:textSize="15sp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_introduce_text_square"
            app:layout_constraintTop_toBottomOf="@+id/respuestaTitulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/BEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="Eliminar"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20sp"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/respuestaEditText"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>