<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_delete_route"
    android:backgroundTint="#F3F0EB"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="28dp"
    app:cardElevation="4dp"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/QuieresEliminarEstaRuta"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ImportanteUnaVezEliminadaLaRutaNoSePodraRecuperar"
            android:textColor="@color/lightGray"
            android:textSize="16sp"
            android:layout_marginBottom="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <Button
                android:id="@+id/btn_cancelEliminarRuta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CancelarEliminarRuta"
                android:textColor="@color/black"
                android:layout_marginEnd="8dp"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

            <Button
                android:id="@+id/btn_confirmEliminarRuta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="@string/ConfirmarEliminarRuta"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>