<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <!-- Botón de Back en la esquina superior izquierda -->
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="Back"
        android:src="@drawable/btn_back"
        android:tint="#000000" />

    <TextView
        android:id="@+id/agRutaTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/ModRutaTit"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="#000000"
        android:padding="15dp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btnBack"
        android:fillViewport="true"
        android:background="#FFFFFF"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Título -->
            <EditText
                android:id="@+id/etTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/TituloMod"
                android:textColorHint="#898989"
                android:textColor="#000000"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                android:padding="12dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#F6CD0B" />

            <!-- Distancia -->
            <EditText
                android:id="@+id/etDistancia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/DistanciaMod"
                android:textColorHint="#898989"
                android:textColor="#000000"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                android:padding="12dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#F6CD0B" />

            <!-- Punto Inicio -->
            <EditText
                android:id="@+id/etInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PuntoInicioMod"
                android:textColorHint="#000000"
                android:textColor="#000000"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                android:padding="12dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#F6CD0B"
                android:visibility="gone" />

            <!-- Punto Descanso -->
            <EditText
                android:id="@+id/etDescanso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PuntoDescansoMod"
                android:textColorHint="#000000"
                android:textColor="#000000"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                android:padding="12dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#F6CD0B"
                android:visibility="gone" />

            <!-- Punto Fin -->
            <EditText
                android:id="@+id/etFin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PuntoFinMod"
                android:textColorHint="#000000"
                android:textColor="#000000"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                android:padding="12dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#F6CD0B"
                android:visibility="gone" />

            <!-- Tiempo -->
            <EditText
                android:id="@+id/etTiempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/TiempoMod"
                android:textColorHint="#898989"
                android:textColor="#000000"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                android:padding="12dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#F6CD0B" />

            <!-- Nivel -->
            <TextView
                android:id="@+id/tvNivel"
                android:layout_width="253dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:backgroundTint="#F6CD0B"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/NivelMod"
                android:padding="12dp"
                android:textColor="#000000"
                android:textColorHint="#898989"
                android:textSize="16sp" />

            <!-- FrameLayout para superponer el botón sobre el MapView -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="350dp">

                <!-- MapView -->
                <com.mapbox.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <!-- Botón Eliminar en la esquina superior derecha -->
                <ImageButton
                    android:id="@+id/btnEliminarRuta"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/erase_icon"
                    android:background="@android:color/transparent"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/white" />
            </FrameLayout>

            <!-- Otros botones -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btnSiguiente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/yellow_disabled"
                    android:fontFamily="@font/roboto_regular"
                    android:padding="12dp"
                    android:text="@string/SiguienteMod"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnEnviar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/yellow_disabled"
                    android:fontFamily="@font/roboto_medium"
                    android:padding="12dp"
                    android:text="@string/ModRutaBtn"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
