<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.3"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"/>

    <ImageView
        android:id="@+id/IVLogo"
        android:layout_width="170dp"
        android:layout_height="0dp"
        android:contentDescription="@string/CDLogo"
        android:src="@drawable/logo_saca_la_bici_1"
        app:layout_constraintBottom_toBottomOf="@id/top_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"/>

    <View
        android:id="@+id/VYellowBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_top_yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/middle_guideline" />

    <View android:id="@+id/VWhiteBackground"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:background="@drawable/rounded_corners"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/top_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        />

    <TextView
        android:id="@+id/TVTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/TSessionTitle"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/VWhiteBackground"
        app:layout_constraintStart_toStartOf="@+id/VWhiteBackground"
        app:layout_constraintTop_toTopOf="@id/VWhiteBackground" />

    <TextView
        android:id="@+id/TVSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TSessionSubtitle"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/TVTitle"
        app:layout_constraintEnd_toEndOf="@+id/VWhiteBackground"
        app:layout_constraintStart_toStartOf="@+id/VWhiteBackground"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/BRegister"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginTop="25dp"
        android:text="@string/TSignUp"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_black"
        app:cornerRadius="14dp"
        app:backgroundTint="@color/yellow"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/TVSubtitle"
        app:layout_constraintEnd_toEndOf="@+id/VWhiteBackground"
        app:layout_constraintStart_toStartOf="@+id/VWhiteBackground"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/BLogin"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginTop="5dp"
        android:text="@string/TLogin"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_black"
        app:cornerRadius="14dp"
        app:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/BRegister"
        app:layout_constraintEnd_toEndOf="@+id/VWhiteBackground"
        app:layout_constraintStart_toStartOf="@+id/VWhiteBackground"
        app:strokeColor="#D9D9D9"
        app:strokeWidth="1dp" />

    <View
        android:id="@+id/VLeftLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="23dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/TVContinue"
        app:layout_constraintStart_toStartOf="@+id/VWhiteBackground"
        app:layout_constraintTop_toBottomOf="@+id/BLogin"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/TVContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TContinueWIth"
        android:textSize="11sp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/BLogin"
        app:layout_constraintStart_toStartOf="@id/VWhiteBackground"
        app:layout_constraintEnd_toEndOf="@id/VWhiteBackground" />

    <View
        android:id="@+id/VRightLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="23dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/VWhiteBackground"
        app:layout_constraintStart_toEndOf="@+id/TVContinue"
        app:layout_constraintTop_toBottomOf="@+id/BLogin"
        app:layout_constraintWidth_percent="0.3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/BGoogle"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginTop="5dp"
        android:text="@string/TContinueWithGoogle"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_light"
        app:cornerRadius="14dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/TVContinue"
        app:layout_constraintEnd_toEndOf="@+id/VWhiteBackground"
        app:layout_constraintStart_toStartOf="@+id/VWhiteBackground"
        app:strokeColor="#D9D9D9"
        app:strokeWidth="1dp"
        app:icon="@drawable/ic_google"
        app:iconTint="@color/semi_transparent_black"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/BFacebook"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginTop="5dp"
        android:text="@string/TContinueWithFacebook"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_light"
        app:cornerRadius="14dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/BGoogle"
        app:layout_constraintEnd_toEndOf="@+id/VWhiteBackground"
        app:layout_constraintStart_toStartOf="@+id/VWhiteBackground"
        app:strokeColor="#D9D9D9"
        app:strokeWidth="1dp"
        app:icon="@drawable/ic_facebook"
        app:iconTint="@color/semi_transparent_black"/>

</androidx.constraintlayout.widget.ConstraintLayout>